[gd_scene load_steps=8 format=3 uid="uid://d88jykgl6jdq"]

[ext_resource type="Script" uid="uid://xoomh8en4opg" path="res://scripts/menu/skilltree/SkillTreeUI_v2.gd" id="1_k3d6t"]
[ext_resource type="Texture2D" uid="uid://b4tlhj27xqekg" path="res://sourceArt/Icons/arrowLeft.png" id="2_yhj77"]
[ext_resource type="FontFile" uid="uid://h7k15drun7xd" path="res://resource/fonts/architect-s-daughter/ArchitectsDaughter.ttf" id="3_2mxpg"]
[ext_resource type="Theme" uid="uid://dcn0qri7xl5ii" path="res://themes/gameui_theme.tres" id="4_yjofd"]
[ext_resource type="Texture2D" uid="uid://3mxalrtgmh4n" path="res://resource/portraits/Paladin.png" id="5_yjofd"]
[ext_resource type="Texture2D" uid="uid://d16gej7txt2ta" path="res://sourceArt/Random/ShadedCircle.png" id="6_k3d6t"]
[ext_resource type="FontFile" uid="uid://qg4ohjuldvkx" path="res://resource/fonts/droid-sans/DroidSans-Bold.ttf" id="6_yjofd"]

[node name="SkillTreeUI_v2" type="Panel"]
unique_name_in_owner = true
self_modulate = Color(0.258824, 0.227451, 0.227451, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1
script = ExtResource("1_k3d6t")

[node name="BackButton" type="TextureButton" parent="."]
unique_name_in_owner = true
self_modulate = Color(1, 0.596078, 0.0705882, 1)
layout_mode = 0
offset_top = 17.0
offset_right = 100.0
offset_bottom = 117.0
texture_normal = ExtResource("2_yhj77")
texture_pressed = ExtResource("2_yhj77")
texture_hover = ExtResource("2_yhj77")
texture_disabled = ExtResource("2_yhj77")
texture_focused = ExtResource("2_yhj77")

[node name="TitleLabel" type="Label" parent="."]
modulate = Color(0.678431, 0.741176, 0.937255, 1)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -149.0
offset_right = 152.0
offset_bottom = 96.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.67451, 0.305882, 0.203922, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/outline_size = 2
theme_override_constants/shadow_outline_size = 2
theme_override_fonts/font = ExtResource("3_2mxpg")
theme_override_font_sizes/font_size = 40
text = "Skill Tree"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -185.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 0

[node name="CharPortrait" type="TextureRect" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 180)
layout_mode = 2
texture = ExtResource("5_yjofd")

[node name="SoulHolder" type="TextureRect" parent="HBoxContainer"]
self_modulate = Color(0.273873, 0.273873, 0.273873, 1)
layout_mode = 2
size_flags_vertical = 8
tooltip_text = "Souls are needed to enable your skill tree nodes. 1 Character Level = 1 Soul."
texture = ExtResource("6_k3d6t")
stretch_mode = 3

[node name="SoulsLabel" type="Label" parent="HBoxContainer/SoulHolder"]
unique_name_in_owner = true
self_modulate = Color(0.735534, 0.353235, 1, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_yjofd")
theme_override_font_sizes/font_size = 40
text = "9"
horizontal_alignment = 1
vertical_alignment = 1

[node name="InfoPanel" type="Panel" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/InfoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="InfoTitle" type="RichTextLabel" parent="HBoxContainer/InfoPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 2
theme_override_font_sizes/normal_font_size = 30
theme_override_font_sizes/bold_font_size = 30
bbcode_enabled = true
text = "[center]REVIVAL[/center]"
fit_content = true

[node name="InfoDesc" type="RichTextLabel" parent="HBoxContainer/InfoPanel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "[center]You now revive after death with 50% health.
Happens only once per run.[/center]"
fit_content = true

[node name="UnlockButton" type="Button" parent="HBoxContainer/InfoPanel/VBoxContainer"]
unique_name_in_owner = true
self_modulate = Color(0.05, 1, 0.0658333, 1)
layout_mode = 2
size_flags_vertical = 10
theme = ExtResource("4_yjofd")
theme_override_font_sizes/font_size = 25
text = " Unlock (x100 Gold) "

[node name="EnableButton" type="Button" parent="HBoxContainer/InfoPanel/VBoxContainer"]
unique_name_in_owner = true
visible = false
self_modulate = Color(0.735534, 0.353235, 1, 1)
layout_mode = 2
size_flags_vertical = 10
theme = ExtResource("4_yjofd")
theme_override_font_sizes/font_size = 25
text = "Enable (x1 Soul) "

[node name="DisableButton" type="Button" parent="HBoxContainer/InfoPanel/VBoxContainer"]
unique_name_in_owner = true
visible = false
self_modulate = Color(1, 0.271667, 0.05, 1)
layout_mode = 2
theme = ExtResource("4_yjofd")
theme_override_font_sizes/font_size = 25
text = "Refund (x1 Souls)"

[node name="Panel" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0.917647)
custom_minimum_size = Vector2(400, 0)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -277.0
offset_bottom = 203.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="Panel/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.886275)
layout_mode = 2
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 10
columns = 8
